refactor(CBS-256567:LN-58226:LN-58800): fix interest rate