@@ -1,13 +1,13 @@
 package ir.dotin.loan.trade.adapters.driving.rest.command.mapper;
 
 import java.time.Period;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
-import org.mapstruct.Named;
 import org.mapstruct.NullValuePropertyMappingStrategy;
 import org.mapstruct.ReportingPolicy;
 
@@ -27,27 +27,15 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
     @Mapping(source = "title", target = "title.value")
     @Mapping(source = "currencyType", target = "currencyType.value")
     @Mapping(source = "economicSector", target = "economicSector.code")
-    @Mapping(target = "confirmTypes", qualifiedByName = "mapConfirmTypeList")
-    @Mapping(target = "amountRange", qualifiedByName = "mapAmountRange")
-    @Mapping(target = "durationRange", qualifiedByName = "mapDurationRange")
-    @Mapping(target = "interestPolicy", qualifiedByName = "mapInterestPolicy")
-    @Mapping(target = "penaltyPolicy", qualifiedByName = "mapPenaltyPolicy")
-    @Mapping(target = "installmentPolicy", qualifiedByName = "mapInstallmentPolicy")
-    @Mapping(target = "gracePeriodPolicy", qualifiedByName = "mapGracePeriodPolicy")
-    @Mapping(target = "repaymentPriorityPolicy", qualifiedByName = "mapRepaymentPriorityPolicy")
-    @Mapping(target = "regulatoryCompliancePolicy", qualifiedByName = "mapRegulatoryCompliancePolicy")
-    @Mapping(target = "collateralPolicy", qualifiedByName = "mapCollateralPolicy")
     DefineTradeLoanArrangementCommand toCommand(DefineTradeLoanArrangementRequest request);
 
-    @Named("mapConfirmTypeList")
     default List<DefineTradeLoanArrangementCommand.ConfirmTypeDto> mapConfirmTypeList(List<String> confirmTypes) {
-        if (confirmTypes == null) return null;
+        if (confirmTypes == null) return Collections.emptyList();
         return confirmTypes.stream()
                 .map(DefineTradeLoanArrangementCommand.ConfirmTypeDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Named("mapAmountRange")
     default DefineTradeLoanArrangementCommand.AmountRangeDto mapAmountRange(
             DefineTradeLoanArrangementRequest.AmountRangeDto amountRange) {
         if (amountRange == null) return null;
@@ -56,7 +44,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 new DefineTradeLoanArrangementCommand.MoneyDto(amountRange.max()));
     }
 
-    @Named("mapDurationRange")
     default DefineTradeLoanArrangementCommand.LoanDurationRangeDto mapDurationRange(
             DefineTradeLoanArrangementRequest.LoanDurationRangeDto durationRange) {
         if (durationRange == null) return null;
@@ -64,19 +51,18 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 Period.ofMonths(durationRange.minMonths()), Period.ofMonths(durationRange.maxMonths()));
     }
 
-    @Named("mapInterestPolicy")
     default DefineTradeLoanArrangementCommand.InterestPolicyDto mapInterestPolicy(
             DefineTradeLoanArrangementRequest.InterestPolicyDto interestPolicy) {
         if (interestPolicy == null) return null;
         return new DefineTradeLoanArrangementCommand.InterestPolicyDto(
-                interestPolicy.minRate(),
-                interestPolicy.maxRate(),
+                interestPolicy.rate(),
+                interestPolicy.minPreferentialRate(),
+                interestPolicy.maxPreferentialRate(),
                 interestPolicy.interestFormula(),
                 interestPolicy.refundFormula(),
                 interestPolicy.dailyInterest());
     }
 
-    @Named("mapPenaltyPolicy")
     default DefineTradeLoanArrangementCommand.PenaltyPolicyDto mapPenaltyPolicy(
             DefineTradeLoanArrangementRequest.PenaltyPolicyDto penaltyPolicy) {
         if (penaltyPolicy == null) return null;
@@ -87,7 +73,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 penaltyPolicy.paymentType());
     }
 
-    @Named("mapInstallmentPolicy")
     default DefineTradeLoanArrangementCommand.InstallmentPolicyDto mapInstallmentPolicy(
             DefineTradeLoanArrangementRequest.InstallmentPolicyDto installmentPolicy) {
         if (installmentPolicy == null) return null;
@@ -98,7 +83,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 installmentPolicy.paymentType());
     }
 
-    @Named("mapGracePeriodPolicy")
     default DefineTradeLoanArrangementCommand.GracePeriodPolicyDto mapGracePeriodPolicy(
             DefineTradeLoanArrangementRequest.GracePeriodPolicyDto gracePeriodPolicy) {
         if (gracePeriodPolicy == null) return null;
@@ -108,7 +92,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 gracePeriodPolicy.formula());
     }
 
-    @Named("mapRepaymentPriorityPolicy")
     default DefineTradeLoanArrangementCommand.RepaymentPriorityPolicyDto mapRepaymentPriorityPolicy(
             DefineTradeLoanArrangementRequest.RepaymentPriorityPolicyDto repaymentPriorityPolicy) {
         if (repaymentPriorityPolicy == null) return null;
@@ -122,7 +105,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 repaymentPriorityPolicy.hasEqualPriority());
     }
 
-    @Named("mapRegulatoryCompliancePolicy")
     default DefineTradeLoanArrangementCommand.RegulatoryCompliancePolicyDto mapRegulatoryCompliancePolicy(
             DefineTradeLoanArrangementRequest.RegulatoryCompliancePolicyDto regulatoryCompliancePolicy) {
         if (regulatoryCompliancePolicy == null) return null;
@@ -132,7 +114,6 @@ public interface DefineTradeLoanArrangementRequestToCommandMapper {
                 regulatoryCompliancePolicy.suspiciousPeriodMonths());
     }
 
-    @Named("mapCollateralPolicy")
     default DefineTradeLoanArrangementCommand.CollateralPolicyDto mapCollateralPolicy(
             DefineTradeLoanArrangementRequest.CollateralPolicyDto collateralPolicy) {
         if (collateralPolicy == null) return null;
